# CyphalBoot2040

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: cmake.yml  windows.yml
docs/: Memory Map.xlsx
scripts/: memmap_application.ld  memmap_cyphal_boot_2040.ld  memmap_cyphal_boot_2040_copy_to_ram.ld
src/: CyphalBoot2040.cpp
